tenzir/integration/data/reference/expression/test_universal_function_call_syntax/step_02.ref
error: expected additional positional argument `<string>`
 --> /dev/stdin:1:17
  |
1 | from { x: "abc".starts_with() }
  |                 ^^^^^^^^^^^ 
  |
  = usage: starts_with(<string>, <string>)
  = docs: https://docs.tenzir.com/functions/starts_with